pgmq-rs/src/install/snapshots/pgmq__install__script__tests__parsed_script_name__from_static_str.snap
---
source: src/install/script.rs
expression: name
---
ParsedScriptName {
    original: "pgmq--1.2.3--1.3.0.sql",
    from: Version {
        major: 1,
        minor: 2,
        patch: 3,
    },
    to: Version {
        major: 1,
        minor: 3,
        patch: 0,
    },
}
