pgmq-rs/src/install/snapshots/pgmq__install__script__tests__parsed_script_name__from_static_str_err_missing_both_versions.snap
---
source: src/install/script.rs
expression: name
---
Err(
    InstallationError(
        "Invalid script name: 'pgmq.sql'",
    ),
)
