pgmq-rs/src/install/snapshots/pgmq__install__script__tests__parsed_script_name__from_static_str_err_wrong_extension.snap
---
source: src/install/script.rs
expression: name
---
Err(
    InstallationError(
        "Invalid script name: 'pgmq--1.2.3--4.5.6.sqlx'",
    ),
)
