pgmq-rs/src/install/snapshots/pgmq__install__script__tests__parsed_script_name__init_script.snap
---
source: src/install/script.rs
expression: name
---
ParsedScriptName {
    original: "pgmq.sql",
    from: Version {
        major: 0,
        minor: 0,
        patch: 0,
    },
    to: Version {
        major: 1,
        minor: 2,
        patch: 3,
    },
}
